# PremLeauge_Predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_predict.ps1
src/epl_predictor/: __init__.py  config.py  predict.py  visualize.py
src/epl_predictor/data/: fetch_data.py  inspect_data.py  make_dataset.py
src/epl_predictor/features/: build_features.py
src/epl_predictor/models/: train_model.py
